--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMhbj4V7iMQzYq/nIgaEMyh",
+      "authorship_tag": "ABX9TyOMoGOLl81YPaeDR3aFxAd8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,6 +48,37 @@
       "source": [
         "print(\"hwello\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"nezat\")"
+      ],
+      "metadata": {
+        "id": "rG9RUrdoqymV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"siddika\")"
+      ],
+      "metadata": {
+        "id": "AqOZsTBLq07R"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "v1iIALnAq1LK"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
